@@ -1,4 +1,4 @@
 DIST DBDesigner4.0.5.4.tar.gz 9339411 RMD160 57ae660085ca1e085183f41485ca67bed1c48873 SHA1 3692bbd059f5e2b3c74e9746c0a82f90b4349009 SHA256 10a0e541de6447954080649502ee5d08720aad5f835ac8983af76131f375c659
-EBUILD dbdesigner-4.0.5.4-r4.ebuild 1632 RMD160 9d65c267fb396268fe3cf4439a8fde270bf1d78d SHA1 b8985356f1974db6b1410462fcc2581355e47ce6 SHA256 93eb5549f85fa1d40daa4bb3c989d4dafddbb29a743b74a1082a8d21a3005b2b
-MISC ChangeLog 269 RMD160 05b289435f386a3265eb15a7620045de6776861b SHA1 49e4c450aba5baa585f720dbfd7efa5d28cc55f3 SHA256 643aee2e48e75c78d78b4f7eb0a118c817fc4ffa37ece53671907decf8c6c699
+EBUILD dbdesigner-4.0.5.4-r4.ebuild 1611 RMD160 cfbfeb3a39f858f868a8604e463037bd30d2e17d SHA1 cc9da12cc71ce05b327120e4886c8a828055a7ff SHA256 1a596d17b3e2b43ba3ce67957f4d28f1ff8131c8dd15887c041b9c4b40a3811a
+MISC ChangeLog 389 RMD160 4a05822b93a2d6d168e4df09f556d6e2d18afeb8 SHA1 208b92e431465d69657b096642898a2bd4fa4ed3 SHA256 3876543c541dadc5e69f7fe6abc5a60513698a0f25bb8b986ec46120ed2ae5ef
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
